crates/apollo-compiler/test_data/diagnostics/0058_fragment_definitions_with_duplicate_names.txt
Error: the fragment `petFragment` is defined multiple times in the document
    ╭─[0058_fragment_definitions_with_duplicate_names.graphql:22:10]
    │
 17 │ fragment petFragment on Pet {
    │          ─────┬─────  
    │               ╰─────── previous definition of `petFragment` here
    │ 
 22 │ fragment petFragment on Pet {
    │          ─────┬─────  
    │               ╰─────── `petFragment` redefined here
    │ 
    │ Help: `petFragment` must only be defined once in this document.
────╯

